fix# 4384 add jdk version check and add more add-opens